# cobrust

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  README.zh.md  RELEASE_NOTES_v0.4.0.md  RELEASE_NOTES_v0.5.0.md  RELEASE_NOTES_v0.5.1.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.6.1.md  RELEASE_NOTES_v0.6.2.md  cobrust.toml.example  pd.cb  pe.cb  pf.cb  pg.cb
crates/cobrust-cli/: Cargo.toml  build.rs
crates/cobrust-cli/runtime/: cobrust_main.c  cpu_features.c  m10_runtime.c
crates/cobrust-cli/src/: add.rs  build.rs  check.rs  dap.rs  debug.rs  error_ux.rs  exit_codes.rs  fmt.rs  install.rs  lsp.rs  main.rs  new.rs  pkg_build.rs  repl.rs  report_bug.rs  run.rs  skills.rs  test_runner.rs  translate.rs
crates/cobrust-cli/tests/: borrow_phase_g_e2e.rs  build_tempdir_cleanup.rs  builtins_abs_range_e2e.rs  bytes_ops_e2e.rs  bytes_primitive_e2e.rs  cli_break_continue_e2e.rs  cli_continue_in_for_e2e.rs  cli_exit_codes.rs  cli_smoke.rs  cli_stdin_argv_e2e.rs  cli_subcommands.rs  cli_translate_smoke.rs  cli_verifier_exit_corpus.rs  coil_arange_e2e.rs  coil_array_e2e.rs  coil_astype_e2e.rs  coil_binfloat_e2e.rs  coil_broadcast_e2e.rs  coil_compare_e2e.rs  coil_construct_e2e.rs  coil_div_scalar_e2e.rs  coil_hello_e2e.rs  coil_invtrig_e2e.rs  coil_left_scalar_e2e.rs  coil_linalg_e2e.rs  coil_manipulate_e2e.rs  coil_matmul_e2e.rs  coil_minmax_e2e.rs  coil_ops_e2e.rs  coil_ops_phase2_e2e.rs  coil_p0_e2e.rs  coil_predicate_e2e.rs  coil_rearrange_e2e.rs  coil_reduce_e2e.rs  coil_reshape_e2e.rs  coil_round_e2e.rs  coil_scalararg_e2e.rs  coil_sort_e2e.rs  coil_stats_e2e.rs  coil_triangle_e2e.rs  (+86 more)
crates/cobrust-codegen/: Cargo.toml
crates/cobrust-codegen/src/: abi.rs  artifact.rs  cranelift_backend.rs  error.rs  lib.rs  linker.rs  llvm_backend.rs  lowering.rs  target.rs
crates/cobrust-codegen/tests/: aggregate_corpus.rs  binary_size_bench.rs  binary_size_prodscale.rs  cast_corpus.rs  codegen_diff_corpus.rs  codegen_ill_formed.rs  codegen_object_layout.rs  codegen_release_smoke.rs  codegen_well_formed.rs  control_flow_combinations_corpus.rs  dwarf_lldb_smoke.rs  float_return_corpus.rs  fnref_call_corpus.rs  if_condition_corpus.rs  llvm_wave3_dict_set_tuple.rs  llvm_wave3_fmt_iter_math_str.rs  llvm_wave3_input_readline.rs  llvm_wave3_list_runtime.rs  llvm_wave3_llm_router.rs  llvm_wave3_panic_argv.rs  ref_corpus.rs  runtime_dispatch_smoke.rs  tier2_target_cpu_smoke.rs  while_condition_corpus.rs  while_if_corpus.rs
crates/cobrust-dap/: Cargo.toml
crates/cobrust-dap-shim/: Cargo.toml
crates/cobrust-dap-shim/src/: main.rs
crates/cobrust-dap/src/: dap_types.rs  evaluate.rs  handlers.rs  lib.rs  lldb_driver.rs  main.rs
crates/cobrust-dap/tests/: dap_e2e_smoke.rs  dap_handler_robustness.rs  dap_handler_snapshots.rs  dap_types_serde_round_trip.rs  lldb_driver_integration_e2e.rs  wave_4_dap_e2e.rs  wave_5_dap_e2e.rs
crates/cobrust-frontend/: Cargo.toml
crates/cobrust-frontend/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  prelude.rs  span.rs  token.rs  unparse.rs
crates/cobrust-frontend/tests/: borrow_phase_g_parse_corpus.rs  break_continue_parse_corpus.rs  fuzz_proptest.proptest-regressions  fuzz_proptest.rs  lexer_boundaries.rs  parse_error_variants.rs  phase_m_syntax_corpus.rs  pratt_edge_cases.rs  round_trip.rs
crates/cobrust-hir/: Cargo.toml
crates/cobrust-hir/src/: desugar.rs  error.rs  lib.rs  lower.rs  scope.rs  tree.rs
crates/cobrust-hir/tests/: lower_forms.rs  lowering_invariants.rs  scope_chain.rs
crates/cobrust-jit/: Cargo.toml
crates/cobrust-jit/src/: engine.rs  error.rs  handle.rs  lib.rs  lower.rs
crates/cobrust-jit/tests/: jit_roundtrip.rs
crates/cobrust-llm-router/: Cargo.toml
crates/cobrust-llm-router/src/: anthropic.rs  cache.rs  config.rs  ledger.rs  lib.rs  openai.rs  provider.rs  router.rs
crates/cobrust-llm-router/tests/: adapters_http.rs  real_llm_smoke.rs  synthetic_provider.rs
crates/cobrust-lsp/: Cargo.toml
crates/cobrust-lsp-shim/: Cargo.toml
crates/cobrust-lsp-shim/src/: main.rs
crates/cobrust-lsp-shim/tests/: shim_smoke.rs
crates/cobrust-lsp/src/: call_hierarchy.rs  code_action.rs  completion.rs  debounce.rs  diagnostic.rs  goto_def.rs  hover.rs  inlay.rs  lib.rs  main.rs  rename.rs  semantic_tokens.rs  span_convert.rs
crates/cobrust-lsp/tests/: diagnostic_parity_smoke.rs  diagnostic_parity_sweep.rs  did_change_e2e.rs  hover_completion_e2e.rs  rename_e2e.rs  snapshot_diagnostics.rs  wave_3_e2e.rs  wave_4_e2e.rs  wave_5_e2e.rs
crates/cobrust-mir/: Cargo.toml
crates/cobrust-mir/src/: borrow.rs  drop.rs  error.rs  lib.rs  lower.rs  tree.rs
crates/cobrust-mir/tests/: borrow_phase_g_f30_witness.rs  break_continue_mir_corpus.rs  lower_forms.rs  method_dispatch_f30_witness.rs  mir_fuzz.rs  mir_ill_formed.rs  mir_well_formed.rs
crates/cobrust-pkg/: Cargo.toml
crates/cobrust-pkg/src/: cpu_detect.rs  error.rs  lib.rs  lockfile.rs  manifest.rs  registry.rs  registry_client.rs  resolver.rs  sources.rs  tarball.rs  wheel_select.rs
crates/cobrust-pkg/tests/: cpu_detect_tests.rs  lockfile_determinism.rs  manifest_corpus.rs  registry_cache.rs  registry_client_tests.rs  resolver_smoke.rs  wheel_select_tests.rs
crates/cobrust-registry/: Cargo.toml
crates/cobrust-registry/src/: generator.rs  lib.rs  main.rs
crates/cobrust-stdlib/: Cargo.toml
crates/cobrust-stdlib/src/: array.rs  bytes.rs  collections.rs  env.rs  fmt.rs  io.rs  iter.rs  json.rs  lib.rs  llm.rs  math.rs  panic.rs  prompt.rs  random.rs  re.rs  reduce.rs  runtime.rs  string.rs  sync.rs  task.rs  time.rs  tool.rs
crates/cobrust-stdlib/tests/: for_protocol_corpus.rs  fstring_corpus.rs  io_input.rs  io_input_fuzz.proptest-regressions  io_input_fuzz.rs  list_str_drop_corpus.rs  llm_cabi_corpus.rs  llm_corpus.rs  llm_corpus_verify.py  llm_fuzz.rs  print_no_nl_lit_rodata_safety.rs  prompt_cabi_corpus.rs  prompt_corpus.rs  prompt_corpus_verify.py  (+9 more)
crates/cobrust-translator/: Cargo.toml
crates/cobrust-types/: Cargo.toml
crates/cobrust-types-cb/: Cargo.toml
crates/cobrust-types-parity/: Cargo.toml
(+1412 files in other folders)
