[workspace]
resolver = "2"
members = [
    "crates/cobrust-cli",
    "crates/cobrust-dateutil",
    "crates/cobrust-frontend",
    "crates/cobrust-hir",
    "crates/cobrust-mir",
    "crates/cobrust-types",
    "crates/cobrust-codegen",
    "crates/cobrust-jit",
    "crates/cobrust-llm-router",
    "crates/cobrust-msgpack",
    "crates/cobrust-pkg",
    "crates/cobrust-tomli",
    "crates/cobrust-numpy",
    "crates/cobrust-stdlib",
    "crates/cobrust-translator",
    "crates/cobrust-requests",
    "crates/cobrust-click",
    "crates/cobrust-types-parity",
    "crates/cobrust-types-cb",
    "crates/cobrust-lsp",
]

[workspace.package]
version = "0.3.0"
edition = "2024"
rust-version = "1.94"
license = "Apache-2.0 OR MIT"
authors = ["The Cobrust Project"]
repository = "https://github.com/Cobrust-lang/cobrust"
homepage = "https://github.com/Cobrust-lang/cobrust"
readme = "README.md"

# Workspace-wide rustc lints.
# Strict by intent: M0 skeleton compiles clean; new code stays clean.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"
unused_must_use = "deny"

# Workspace-wide clippy lints.
# pedantic at priority -1 so individual overrides win.
[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "warn"
todo = "warn"
dbg_macro = "warn"
# Disable lints that produce noise on legitimate domain vocabulary.
doc_markdown = "allow"
module_name_repetitions = "allow"

# Shared dependency versions. Members opt in with `dep.workspace = true`.
[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.40", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "sync",
    "time",
] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream", "rustls-tls"], default-features = false }
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"
semver = "1"
flate2 = "1"
tar = "0.4"
# ADR-0050d Decision 6A — Wave 3 sub-sprint d Dict storage backing.
# `indexmap::IndexMap` provides Python-3.7+ insertion-order iteration
# (`for k in d:` / `d.items()` / `d.keys()` / `d.values()` preserve insert
# order). Dep audit: depends only on `equivalent` (MIT/Apache-2.0) and
# `hashbrown` (transitively, already a common dep).
indexmap = "2"
# M-AI.0: cobrust-stdlib consumes the router via the optional llm-router feature.
cobrust-llm-router = { path = "crates/cobrust-llm-router" }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "debuginfo"
