[package]
name = "cobrust-cli"
version = "0.1.2"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "AI-friendly Python successor in Rust with LLM-driven translation pipeline and AI-native stdlib in development (Phase F.2)."
keywords = ["cobrust", "compiler", "language", "python", "cli"]
categories = ["command-line-utilities", "development-tools", "compilers"]

[[bin]]
name = "cobrust"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
cobrust-codegen = { path = "../cobrust-codegen", version = "=0.1.2" }
cobrust-frontend = { path = "../cobrust-frontend", version = "=0.1.2" }
cobrust-hir = { path = "../cobrust-hir", version = "=0.1.2" }
cobrust-llm-router = { path = "../cobrust-llm-router", version = "=0.1.2" }
cobrust-mir = { path = "../cobrust-mir", version = "=0.1.2" }
cobrust-pkg = { path = "../cobrust-pkg", version = "=0.1.2" }
cobrust-translator = { path = "../cobrust-translator", version = "=0.1.2" }
cobrust-types = { path = "../cobrust-types", version = "=0.1.2" }
rustyline = "14"
target-lexicon = "0.13"
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tempfile = "3"
