[package]
name = "cobrust-cli"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "AI-friendly Python successor in Rust with LLM-driven translation pipeline and AI-native stdlib in development (Phase F.2)."
keywords = ["cobrust", "compiler", "language", "python", "cli"]
categories = ["command-line-utilities", "development-tools", "compilers"]

[[bin]]
name = "cobrust"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
cobrust-codegen = { path = "../cobrust-codegen", version = "=0.2.0" }
cobrust-frontend = { path = "../cobrust-frontend", version = "=0.2.0" }
cobrust-hir = { path = "../cobrust-hir", version = "=0.2.0" }
cobrust-llm-router = { path = "../cobrust-llm-router", version = "=0.2.0" }
cobrust-mir = { path = "../cobrust-mir", version = "=0.2.0" }
cobrust-pkg = { path = "../cobrust-pkg", version = "=0.2.0" }
cobrust-translator = { path = "../cobrust-translator", version = "=0.2.0" }
cobrust-types = { path = "../cobrust-types", version = "=0.2.0" }
rustyline = "14"
target-lexicon = "0.13"
# `tempfile` is a runtime dep (NOT dev-dep) since 2026-05-18: the
# `cobrust build` driver uses TempDir to RAII-scope intermediate .o
# artifacts so they don't leak into the caller's -o directory. See
# crates/cobrust-cli/src/build.rs `build()::EmitKind::Executable` and
# commit `findings: diagnose CLI tempdir leak root cause` for context.
tempfile = "3"
thiserror = { workspace = true }
tokio = { workspace = true }
