[package]
name = "cobrust-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cobrust codegen — Cranelift (default) and LLVM (opt-in) backends per ADR-0023."

[lints]
workspace = true

[features]
# ADR-0070 §X.3 BLOCKED 2026-05-26 — the default flip to `["llvm"]`
# was rolled back after the local workspace test sweep revealed
# substantial LLVM `lower_aggregate` gaps for `List` and `FormatString`
# variants (~30+ tests across f64_e2e + list_str_e2e + fstring corpora
# silently relied on Cranelift's defensive lowering). See
# `docs/agent/findings/f53-llvm-default-flip-aggregate-gap.md` for the
# full surface inventory + the prerequisite sprint scope.
#
# Re-flip requires: LLVM backend implements `lower_aggregate(List)` +
# `lower_aggregate(FormatString)` to at least feature parity with the
# Cranelift backend's existing `lower_aggregate_format_string` (1882-2050)
# + `lower_aggregate_list` (1653+).
default = []
# Optional LLVM backend; pulls in inkwell + system LLVM 18+.
llvm = ["dep:inkwell"]
# Use lld via -fuse-ld=lld for the linker delegate.
lld = []

[dependencies]
cobrust-mir = { path = "../cobrust-mir" }
cobrust-types = { path = "../cobrust-types" }
cobrust-frontend = { path = "../cobrust-frontend" }
cobrust-hir = { path = "../cobrust-hir" }
cranelift-codegen = "0.131"
cranelift-frontend = "0.131"
cranelift-module = "0.131"
cranelift-object = "0.131"
target-lexicon = "0.13"
inkwell = { version = "0.9", optional = true, features = ["llvm18-1"] }
thiserror = { workspace = true }
tempfile = "3"

[dev-dependencies]
object = { version = "0.36", features = ["read"] }
