[package]
name = "cobrust-codegen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cobrust codegen — LLVM is the sole AOT backend per ADR-0023 + ADR-0070 §X.4."

[lints]
workspace = true

[features]
# ADR-0070 §X.4 RATIFIED 2026-05-27 — LLVM is the SOLE AOT backend.
# The Cranelift AOT backend (`cranelift_backend.rs` + `abi.rs`) was
# removed; the LLVM column was proven green under LLVM-default at X.3
# (F53/F54/F55/F56/F58 resolved). `inkwell` stays OPTIONAL (Option C,
# not Option A): building `--no-default-features` yields a JIT-substrate
# / frontend-only crate whose `emit()` returns `UnsupportedBackend` but
# whose `lowering.rs` (Cranelift IR substrate) + `cranelift-codegen` /
# `cranelift-frontend` deps remain — that substrate is hard-depended on
# by the RETAINED `cobrust-jit` (ADR-0070 §6 Q2 option a).
default = ["llvm"]
# LLVM AOT backend; pulls in inkwell + system LLVM 18+. Disabling it
# leaves no functional AOT backend (deliberate substrate-only mode).
llvm = ["dep:inkwell"]
# Use lld via -fuse-ld=lld for the linker delegate.
lld = []

[dependencies]
cobrust-mir = { path = "../cobrust-mir" }
cobrust-types = { path = "../cobrust-types" }
cobrust-frontend = { path = "../cobrust-frontend" }
cobrust-hir = { path = "../cobrust-hir" }
# Cranelift IR-construction substrate — retained ONLY for `lowering.rs`,
# the shared MIR→Cranelift-IR lowering that the cobrust-jit (REPL/JIT)
# crate hard-depends on (ADR-0070 §X.4 Option C). NOT an AOT backend.
cranelift-codegen = "0.131"
cranelift-frontend = "0.131"
target-lexicon = "0.13"
inkwell = { version = "0.9", optional = true, features = ["llvm18-1"] }
thiserror = { workspace = true }
tempfile = "3"

[dev-dependencies]
object = { version = "0.36", features = ["read"] }
