[package]
name = "cobrust-dap-shim"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transitional `cobrust-dap` standalone binary (ADR-0068 §4.2) — delegates to cobrust-dap::run(). Deleted at v0.7.0."
keywords = ["cobrust", "dap", "shim", "transitional"]
categories = ["development-tools::debugging"]

[[bin]]
name = "cobrust-dap"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
cobrust-dap = { path = "../cobrust-dap", version = "=0.6.1" }

# Dev-deps for the e2e smoke test (moved here from crates/cobrust-dap/
# in v0.6.0 because env!("CARGO_BIN_EXE_cobrust-dap") only resolves
# inside the bin-providing crate; the bin lives in this shim now).
[dev-dependencies]
serde_json = { workspace = true }
tokio = { version = "1.40", features = [
    "macros",
    "rt-multi-thread",
    "io-util",
    "process",
    "time",
] }
