[package]
name = "cobrust-dap"
version = "0.5.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cobrust DAP (Debug Adapter Protocol) server (wave-2 per ADR-0059b)."
keywords = ["cobrust", "dap", "debug-adapter", "lldb"]
categories = ["development-tools::debugging"]

[[bin]]
name = "cobrust-dap"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
cobrust-frontend = { path = "../cobrust-frontend", version = "=0.5.0" }
cobrust-types = { path = "../cobrust-types", version = "=0.5.0" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.40", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "io-std",
    "sync",
    "time",
    "process",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1"
thiserror = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
