[package]
name = "cobrust-dap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cobrust DAP (Debug Adapter Protocol) server (wave-2 per ADR-0059b)."
keywords = ["cobrust", "dap", "debug-adapter", "lldb"]
categories = ["development-tools::debugging"]

# ADR-0068: bin section removed; lib-only crate exposing pub fn run().
# Transitional `cobrust-dap` standalone binary lives in
# `crates/cobrust-dap-shim/` (v0.6.x); v0.7.0 drops the shim entirely
# and `cobrust dap` subcommand becomes the only entry.
[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
cobrust-frontend = { path = "../cobrust-frontend", version = "=0.6.1" }
cobrust-types = { path = "../cobrust-types", version = "=0.6.1" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.40", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "io-std",
    "sync",
    "time",
    "process",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1"
thiserror = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
