[package]
name = "cobrust-dap"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cobrust DAP (Debug Adapter Protocol) server (wave-2 per ADR-0059b)."
keywords = ["cobrust", "dap", "debug-adapter", "lldb"]
categories = ["development-tools::debugging"]

# ADR-0068: bin section removed; lib-only crate exposing pub fn run().
# ADR-0070 X.5 (v0.7.0): the transitional `cobrust-dap` standalone shim
# binary was DELETED; `cobrust dap` (the cobrust-cli subcommand) is now the
# only entry point into this crate's `run()`.
[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1.40", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "io-std",
    "sync",
    "time",
    "process",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1"
thiserror = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
