[package]
name = "cobrust-frontend"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cobrust frontend: lexer, parser, and AST."

[lints]
workspace = true

[dependencies]
