[package]
name = "cobrust-hir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cobrust HIR (high-level IR) — desugared, name-resolved tree."

[lints]
workspace = true

[dependencies]
