[package]
name = "cobrust-llm-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cobrust LLM Router — provider-agnostic LLM dispatch, caching, and accounting."

[lints]
workspace = true

[dependencies]
