[package]
name = "cobrust-llm-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cobrust LLM Router — provider-agnostic LLM dispatch, caching, and accounting."

[lints]
workspace = true

[dependencies]
async-trait = { workspace = true }
blake3 = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
unicode-normalization = "0.1"
uuid = { version = "1", features = ["v4"] }
time = { version = "0.3", features = ["formatting", "macros", "serde-well-known"] }
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time", "fs", "io-util", "sync"] }
tempfile = "3"
wiremock = "0.6"
