[package]
name = "cobrust-lsp"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cobrust LSP server (textDocument/publishDiagnostics wave-1 per ADR-0057a)."
keywords = ["cobrust", "lsp", "language-server", "ide"]
categories = ["development-tools"]

[[bin]]
name = "cobrust-lsp"
path = "src/main.rs"

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
cobrust-frontend = { path = "../cobrust-frontend", version = "=0.3.0" }
cobrust-hir = { path = "../cobrust-hir", version = "=0.3.0" }
cobrust-mir = { path = "../cobrust-mir", version = "=0.3.0" }
cobrust-types = { path = "../cobrust-types", version = "=0.3.0" }
tower-lsp = "0.20"
tokio = { version = "1.40", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "io-std",
    "sync",
    "time",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
