[package]
name = "cobrust-lsp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Cobrust LSP server (Phase J wave-2.1 textDocument/didChange + Session reuse per ADR-0057b)."
keywords = ["cobrust", "lsp", "language-server", "ide"]
categories = ["development-tools"]

# ADR-0068: bin section removed; lib-only crate exposing pub fn run().
# Transitional `cobrust-lsp` standalone binary lives in
# `crates/cobrust-lsp-shim/` (v0.6.x); v0.7.0 drops the shim entirely
# and `cobrust lsp` subcommand becomes the only entry.
[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
cobrust-frontend = { path = "../cobrust-frontend", version = "=0.6.0" }
cobrust-hir = { path = "../cobrust-hir", version = "=0.6.0" }
cobrust-mir = { path = "../cobrust-mir", version = "=0.6.0" }
cobrust-types = { path = "../cobrust-types", version = "=0.6.0" }
tower-lsp = "0.20"
tokio = { version = "1.40", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "io-std",
    "sync",
    "time",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
insta = { version = "1", features = ["json"] }
# `url` exposes `tower_lsp::lsp_types::Url`; tests need it directly for
# constructing synthetic URIs.
url = "2"
# `cobrust-types::ty::Ty` used by the invalidate-session integration
# test (Ty::Int / Ty::Str comparison).
cobrust-types = { path = "../cobrust-types", version = "=0.6.0" }
