[package]
name = "cobrust-mir"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cobrust MIR (mid-level IR) — control-flow-explicit form for codegen."

[lints]
workspace = true

[dependencies]
cobrust-frontend = { path = "../cobrust-frontend" }
cobrust-hir = { path = "../cobrust-hir" }
cobrust-types = { path = "../cobrust-types" }
thiserror = { workspace = true }

[dev-dependencies]
proptest = "1.5"
