[package]
name = "cobrust-pkg"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cobrust package format — manifest parser, deterministic lockfile, content-addressed registry, semver resolver."

[lints]
workspace = true

[dependencies]
serde       = { workspace = true }
toml        = { workspace = true }
thiserror   = { workspace = true }
tracing     = { workspace = true }
blake3      = { workspace = true }
hex         = { workspace = true }
semver      = { workspace = true }
flate2      = { workspace = true }
tar         = { workspace = true }
cobrust-translator = { path = "../cobrust-translator" }

[dev-dependencies]
tempfile = "3"
