[package]
name = "cobrust-stdlib"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
description = "Cobrust standard library — io / collections / string / math / panic / env / fmt + task / sync (M13) + runtime ABI per ADR-0025 + ADR-0028."
[lib]
crate-type = ["rlib", "staticlib"]


[lints]
workspace = true

[features]
default = ["mimalloc-alloc", "tokio-runtime", "llm-router"]
# M11: mimalloc as the global allocator (per ADR-0025 §G).
mimalloc-alloc = ["dep:mimalloc"]
# M11: opt-out of mimalloc; use the system allocator.
system-alloc = []
# M13: structured-concurrency runtime (per ADR-0028). When disabled,
# the `task` and `sync` modules are not compiled. Default-on so the
# binding ABI is always present for codegen-emitted programs.
tokio-runtime = ["dep:tokio"]
# M-AI.0: source-level binding to crates/cobrust-llm-router. Default-on
# so codegen-emitted programs always have the C-ABI surface present.
llm-router = ["dep:cobrust-llm-router"]

[dependencies]
mimalloc = { version = "0.1", optional = true, default-features = false }
tokio = { workspace = true, optional = true }
cobrust-llm-router = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
# ADR-0050d Decision 6A — Wave 3 sub-sprint d Dict storage backing.
indexmap = { workspace = true }
# ADR-0084 — `import re` regex engine. Already in the workspace lock via
# cobrust-types / cobrust-dap (this is only a new dependency EDGE, no new
# crate download); the regenerated Cargo.lock is staged WITH this Cargo.toml
# per the F64 lesson (CI `--locked` rejects an unstaged lockfile).
regex = "1"

[dev-dependencies]
tempfile = "3"
# ADR-0044 W2 Phase 2: proptest 1024-fuzz harness for input()/read_line()
# (tests/io_input_fuzz.rs).
proptest = "1.5"
